# rust-dice

./: .gitignore  Cargo.toml
parse/: Cargo.toml
parse/src/: ast.rs  lex.rs  lexer.rs  lib.rs  parse.rs  parser.rs
src/: common.rs  dice.rs  error.rs  eval.rs  expr.rs  lib.rs  markdown.rs  ops.rs  roll.rs  stringifiers.rs
src/parse/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs  visit.rs
src/roll/: ctx.rs  error.rs  mod.rs  num.rs  roller.rs  stringify.rs  tree.rs  visit.rs
